[package]
name = "rslive"
version = "0.1.0"
edition = "2024"
authors = ["rslive contributors"]
description = "High-performance live streaming library in Rust"
license = "MIT OR Apache-2.0"
repository = "https://github.com/yourusername/rslive"
keywords = ["streaming", "rtmp", "hls", "webrtc", "media"]
categories = ["network-programming", "multimedia"]

[features]
default = ["rtmp", "flv", "hls"]
rtmp = []
flv = ["rtmp", "dep:axum", "dep:tower", "dep:tower-http", "dep:http", "dep:reqwest"]
hls = ["rtmp", "dep:axum", "dep:tower", "dep:tower-http", "dep:http", "dep:reqwest"]
srt = []
webrtc = []
full = ["rtmp", "flv", "hls", "srt", "webrtc"]

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["codec", "net"] }
tokio-stream = "0.1"
futures = "0.3"

# Byte handling
bytes = "1.5"
bytesize = "1.3"

# Concurrency
parking_lot = "0.12"
dashmap = "6"
crossbeam = "0.8"
flume = "0.11"

# Serialization
byteorder = "1.5"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Async traits
async-trait = "0.1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Configuration
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"

# Network
socket2 = "0.5"

# Time
chrono = "0.4"

# Collections
indexmap = "2"

# HTTP (for HLS/HTTP-FLV)
axum = { version = "0.7", optional = true }
tower = { version = "0.4", optional = true }
tower-http = { version = "0.5", optional = true, features = ["cors"] }
http = { version = "1.0", optional = true }

# URL parsing
url = "2.5"

# Regex for parsing
regex = "1"

# HTTP client (for HLS segments fetching)
reqwest = { version = "0.12", optional = true, features = ["stream"] }

[dev-dependencies]
tokio-test = "0.4"
criterion = { version = "0.5", features = ["async_tokio"] }
pretty_assertions = "1.4"

[[bin]]
name = "rslive-server"
path = "src/bin/server.rs"

[[bench]]
name = "protocol_bench"
harness = false

